files for github-pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "first-react-app",
   "version": "0.1.0",
+  "homepage": "https://lnsjhnssn.github.io/react_app_moviefinder/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +16,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy": "npm run build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
